init page added with actions to create empty or prefilled calendar with random id

--- a/assets/style/app.styl
+++ b/assets/style/app.styl
@@ -40,6 +40,12 @@ $color-purple = #afa0cb
 .snack
   z-index 10060
 
+.btn--wrap
+  height auto
+  padding 10px 0
+  .btn__content
+    white-space normal
+
 .fade-enter-active, .fade-leave-active
   transition opacity .5s
 .fade-enter, .fade-leave-to
